# screensaver.asterwave

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  rules
depends/windows/angle/: CMakeLists.txt
lib/SOIL2/: CMakeLists.txt
lib/kodi/utils/: Time.h
screensaver.asterwave/: addon.xml  addon.xml.in
screensaver.asterwave/resources/: settings.xml
screensaver.asterwave/resources/language/resource.language.af_za/: strings.po
screensaver.asterwave/resources/language/resource.language.am_et/: strings.po
screensaver.asterwave/resources/language/resource.language.ar_sa/: strings.po
screensaver.asterwave/resources/language/resource.language.az_az/: strings.po
screensaver.asterwave/resources/language/resource.language.be_by/: strings.po
screensaver.asterwave/resources/language/resource.language.bg_bg/: strings.po
screensaver.asterwave/resources/language/resource.language.bs_ba/: strings.po
screensaver.asterwave/resources/language/resource.language.ca_es/: strings.po
screensaver.asterwave/resources/language/resource.language.cs_cz/: strings.po
screensaver.asterwave/resources/language/resource.language.cy_gb/: strings.po
screensaver.asterwave/resources/language/resource.language.da_dk/: strings.po
screensaver.asterwave/resources/language/resource.language.de_de/: strings.po
screensaver.asterwave/resources/language/resource.language.el_gr/: strings.po
screensaver.asterwave/resources/language/resource.language.en_au/: strings.po
screensaver.asterwave/resources/language/resource.language.en_gb/: strings.po
screensaver.asterwave/resources/language/resource.language.en_nz/: strings.po
screensaver.asterwave/resources/language/resource.language.en_us/: strings.po
screensaver.asterwave/resources/language/resource.language.eo/: strings.po
screensaver.asterwave/resources/language/resource.language.es_ar/: strings.po
screensaver.asterwave/resources/language/resource.language.es_es/: strings.po
screensaver.asterwave/resources/language/resource.language.es_mx/: strings.po
screensaver.asterwave/resources/language/resource.language.et_ee/: strings.po
screensaver.asterwave/resources/language/resource.language.eu_es/: strings.po
screensaver.asterwave/resources/language/resource.language.fa_af/: strings.po
screensaver.asterwave/resources/language/resource.language.fa_ir/: strings.po
screensaver.asterwave/resources/language/resource.language.fi_fi/: strings.po
screensaver.asterwave/resources/language/resource.language.fo_fo/: strings.po
screensaver.asterwave/resources/language/resource.language.fr_ca/: strings.po
screensaver.asterwave/resources/language/resource.language.fr_fr/: strings.po
screensaver.asterwave/resources/language/resource.language.gl_es/: strings.po
screensaver.asterwave/resources/language/resource.language.he_il/: strings.po
screensaver.asterwave/resources/language/resource.language.hi_in/: strings.po
screensaver.asterwave/resources/language/resource.language.hr_hr/: strings.po
screensaver.asterwave/resources/language/resource.language.hu_hu/: strings.po
screensaver.asterwave/resources/language/resource.language.id_id/: strings.po
screensaver.asterwave/resources/language/resource.language.is_is/: strings.po
screensaver.asterwave/resources/language/resource.language.it_it/: strings.po
screensaver.asterwave/resources/language/resource.language.ja_jp/: strings.po
screensaver.asterwave/resources/language/resource.language.ko_kr/: strings.po
screensaver.asterwave/resources/language/resource.language.lt_lt/: strings.po
screensaver.asterwave/resources/language/resource.language.lv_lv/: strings.po
screensaver.asterwave/resources/language/resource.language.mi/: strings.po
screensaver.asterwave/resources/language/resource.language.mk_mk/: strings.po
screensaver.asterwave/resources/language/resource.language.ms_my/: strings.po
screensaver.asterwave/resources/shaders/: frag.glsl
src/: Effect.cpp  Effect.h  Util.cpp  Util.h  Water.cpp  Water.h  timer.h  types.h  waterfield.cpp  waterfield.h
(+28 files in other folders)
